php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #52060 Memory leak when passing a closure to method_exists()
Submitted: 2010-06-12 00:58 UTC Modified: 2010-06-12 01:20 UTC
From: felipe@php.net Assigned: felipe (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5.3.2 OS: Linux
Private report: No CVE-ID: None
 [2010-06-12 00:58 UTC] felipe@php.net
Description:
------------
See below.

Test script:
---------------
var_dump(method_exists('closure', '__invoke'));

Actual result:
--------------
/home/felipe/dev/phptrunk/Zend/zend_closures.c(136) :  Freeing 0x08C374D4 (9 bytes), script=-
[Fri Jun 11 19:57:03 2010]  Script:  '-'
/home/felipe/dev/phptrunk/Zend/zend_closures.c(128) :  Freeing 0x08C37F68 (164 bytes), script=-
=== Total 2 memory leaks detected ===


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-06-12 00:58 UTC] felipe@php.net
-Status: Open +Status: Assigned -Assigned To: +Assigned To: felipe
 [2010-06-12 01:20 UTC] felipe@php.net
Automatic comment from SVN on behalf of felipe
Revision: http://svn.php.net/viewvc/?view=revision&revision=300392
Log: - Fixed bug #52060 (Memory leak when passing a closure to method_exists())
 [2010-06-12 01:20 UTC] felipe@php.net
-Status: Assigned +Status: Closed
 [2010-06-12 01:20 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 04:00:02 2026 UTC