- Fixed bug #52060 (Memory leak when passing a closure to method_exists())